# enterprise_system

./: Dockerfile  README.md  docker-compose-db.yml  example.env  pyproject.toml
src/enterprise_system/: asgi.py  settings.py  urls.py  wsgi.py
src/si_devices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/si_devices/templates/si_devices/: create_device.html  create_version.html  device_detail.html  device_edit.html  device_form.html  device_info.html  devices.html  login.html  version_create.html  version_success.html  versions.html
src/si_system/: apps.py  urls.py  views.py
src/si_system/templates/si_system/: base.html  index.html
src/si_tests/: apps.py  forms.py  models.py  tables.py  urls.py  views.py
src/si_tests/templates/si_tests/: create_test.html  detail_test.html  test_list.html
src/si_users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/si_users/templates/si_users/: base.html  login.html  profile.html  registration.html
src/static/css/: style.css  users.css
