[tool.poetry]
name = "enterprise-system"
version = "0.1.0"
description = ""
authors = ["Roman <mtdoka@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
django-bootstrap4 = "^24.4"
loguru = "^0.7.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
